--- a/workspace/UD3/ud3-ejercicio/.env
+++ b/workspace/UD3/ud3-ejercicio/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eXwe/cIjjy1T8gyYV98fu8EbmPuEBuAzW1lh/TjrimM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -40,6 +40,7 @@ QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 CACHE_PREFIX=
+CACHE_DRIVER=file
 
 MEMCACHED_HOST=127.0.0.1
 
